--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "flowbite": "^2.2.1"
+        "flowbite": "^2.2.1",
+        "react-hook-form": "^7.50.0"
     }
 }
