--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "clsx": "^2.1.0",
         "flowbite": "^2.2.1",
+        "flowbite-react": "^0.7.2",
         "react-hook-form": "^7.50.0"
     }
 }
